@@ -43,17 +43,13 @@
     <bunsen.version>0.5.14-SNAPSHOT</bunsen.version>
     <junit.version>4.13.2</junit.version>
     <slf4j.version>2.0.17</slf4j.version>
-    <logback.version>1.5.18</logback.version>
+    <logback.version>1.5.31</logback.version>
     <hapi.fhir.version>7.6.1</hapi.fhir.version>
     <hamcrest.version>3.0</hamcrest.version>
     <mockito.version>5.2.0</mockito.version>
     <jcommander.version>1.82</jcommander.version>
     <license-maven-plugin.version>5.0.0</license-maven-plugin.version>
     <beam.version>2.56.0</beam.version>
-    <auto-value.version>1.11.1</auto-value.version>
-    <lombok.version>1.18.42</lombok.version>
-    <errorprone.version>2.42.0</errorprone.version>
-    <nullaway.version>0.12.10</nullaway.version>
   </properties>
 
   <dependencyManagement>
@@ -233,7 +229,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>2.19.0</version>
+      <version>2.21.0</version>
     </dependency>
 
     <dependency>
@@ -261,11 +257,11 @@
         <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>3.3.1</version>
+          <version>3.4.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.14.1</version>
+          <version>3.15.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
@@ -361,7 +357,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>exec-maven-plugin</artifactId>
-          <version>3.6.2</version>
+          <version>3.6.3</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -387,78 +383,6 @@
             with versions >= 6.1. See https://github.com/spring-projects/spring-framework/wiki/Upgrading-to-Spring-Framework-6.x#parameter-name-retention
             for the details -->
           <parameters>true</parameters>
-          <compilerArgs>
-            <!-- Enable access to the packages at compile time -->
-            <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
-            <!-- Enabling ErrorProne;
-              see: https://errorprone.info/docs/installation
-            -->
-            <arg>-XDcompilePolicy=simple</arg>
-            <arg>--should-stop=ifError=FLOW</arg>
-            <arg>
-              -Xplugin:ErrorProne -XepOpt:NullAway:AnnotatedPackages=com.google.fhir.analytics -XepExcludedPaths:.*/target/generated-sources/.* -XepOpt:NullAway:JSpecifyMode=true -XepOpt:NullAway:CheckOptionalEmptiness=true
-            </arg>
-            <arg>
-              -J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
-            </arg>
-          </compilerArgs>
-          <annotationProcessorPaths>
-            <!-- TODO: Check if we can avoid these paths; see here for why:
-              https://errorprone.info/docs/installation#using-error-prone-together-with-other-annotation-processors
-            -->
-            <path>
-              <groupId>org.projectlombok</groupId>
-              <artifactId>lombok</artifactId>
-              <version>${lombok.version}</version>
-            </path>
-            <path>
-              <groupId>com.google.auto.value</groupId>
-              <artifactId>auto-value</artifactId>
-              <version>${auto-value.version}</version>
-            </path>
-            <path>
-              <groupId>org.mockito</groupId>
-              <artifactId>mockito-inline</artifactId>
-              <version>${mockito.version}</version>
-            </path>
-            <path>
-              <groupId>com.google.errorprone</groupId>
-              <artifactId>error_prone_core</artifactId>
-              <version>${errorprone.version}</version>
-            </path>
-            <path>
-              <groupId>com.uber.nullaway</groupId>
-              <artifactId>nullaway</artifactId>
-              <version>${nullaway.version}</version>
-            </path>
-          </annotationProcessorPaths>
         </configuration>
       </plugin>
       <plugin>
